optimised nav for small screen

--- a/src/Components/Nav/Nav.css
+++ b/src/Components/Nav/Nav.css
@@ -27,3 +27,12 @@ img{
         margin-right: 2rem;
     }
   }
+  @media screen and (max-width:400px) {
+    .navbar-toggler{
+        /* background:green; */
+        margin-right: 1rem;
+    }
+    .logo{
+        margin-left:1rem;   
+    }
+  }
